--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+python-dateutil==2.8.1
 requests==2.25.1
 six==1.16.0
 spotipy==2.18.0
